[package]
name          = "hello-rs"
version       = "0.7.0"
description   = "Simple dockerized Rust/axum based HTTP server for demo purposes"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/hello-rs"
repository    = "https://github.com/hseeberger/hello-rs"
documentation = "https://github.com/hseeberger/hello-rs"
publish       = false

[dependencies]
anyhow      = { version = "1.0", features = [ "backtrace" ] }
api-version = { version = "0.3" }
axum        = { version = "0.8", features = [ "http2", "json" ] }
figment     = { version = "0.10", features = [ "env", "yaml" ] }
log         = { version = "0.4" }
logforth    = { version = "0.29", features = [ "starter-log" ] }
serde       = { version = "1.0", features = [ "derive" ] }
tokio       = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower       = { version = "0.5" }

[dev-dependencies]
assert_matches = { version = "1.5" }
