[package]
name = "hello-rs"
version = "0.1.0"
edition = "2021"
authors = [
  "Heiko Seeberger <microsoft7b@quest47c.de>",
]
publish = false

[dependencies]
anyhow             = { version = "1.0", features = [ "backtrace" ] }
axum               = { version = "0.6", features = [ "http2", "json" ] }
configured         = { version = "0.5" }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
tokio              = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower              = { version = "0.4" }
tower-http         = { version = "0.4", features = [ "trace" ] }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
