[package]
name          = "hello-rs"
version       = "0.2.0"
description   = "hello-tracing-backend"
edition       = "2021"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/hello-rs"
repository    = "https://github.com/hseeberger/hello-rs"
documentation = "https://github.com/hseeberger/hello-rs"
publish       = false

[dependencies]
anyhow             = { version = "1.0", features = [ "backtrace" ] }
axum               = { version = "0.6", features = [ "http2", "json" ] }
configured         = { version = "0.7" }
humantime-serde    = { version = "1.1" }
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = { version = "1.0" }
time               = { version = "0.3", features = [ "formatting" ] }
tokio              = { version = "1", features = [ "macros", "rt-multi-thread", "signal" ] }
tower              = { version = "0.4" }
tower-http         = { version = "0.4", features = [ "trace" ] }
tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt", "json" ] }
